--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,12 +4,10 @@
   --tertiary: #788585;
   --light-dark: #9e2183;
   --dark: #980ebb;
-  --border-radius: 0.3rem;
+  --border-radius: 1rem;
 }
 
-* {
-  box-sizing: border-box;
-}
+
 
 body {
   background-color: var(--primary);
@@ -33,6 +31,7 @@ h6 {
   line-height: 1.25;
 }
 
+
 main {
   margin: 20px auto;
   width: 94%;
@@ -47,7 +46,7 @@ p {
   text-decoration: none;
   padding: 6px 5px;
   width: 100%;
-  display: block;
+  display: inline;
   margin: 5px 0;
   border-radius: var(--border-radius);
   color: var(--primary);
@@ -77,7 +76,7 @@ p {
   background-color: var(--light-dark);
   box-shadow: 3px 3px var(--secondary);
   transform: translate(-1px, -1px);
-  display: inline-block;
+  display: inline;
   width: auto;
   margin-top: 20px;
   padding: 15px;
@@ -93,13 +92,16 @@ p {
 }
 
 .hero {
-  padding: 3% 4%;
+  justify-content: center;
+  align-content: center;
+
   background-color: var(--dark);
   color: var(--primary);
 }
 
 .hero p {
   max-width: 75%;
+  align-items: center;
 }
 
 .app-title {
@@ -107,49 +109,19 @@ p {
   background-color: var(--primary);
   color: var(--dark);
   padding: 0 10px;
-  display: inline-block;
+  display: inline;
   border-radius: var(--border-radius);
   box-shadow: 6px 5px var(--light-dark);
 }
 
-.list-group {
-  padding: 0;
-  list-style: none;
-}
 
-.list-item {
-  margin-bottom: 10px;
-  padding: 1.5%;
-  border-radius: var(--border-radius);
-  background-color: var(--light-dark);
-  color: var(--primary);
-  text-decoration: none;
-}
-
-.list-item:hover {
-  background-color: var(--dark);
-}
-
-.status-icon {
-  padding: 2px 5px;
-  margin: 0 5px;
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: var(--border-radius);
-}
-
-.icon-danger {
-  color: rgb(255, 70, 70);
-}
-
-.icon-success {
-  color: rgb(29, 153, 255);
-}
 
 /* CARDS */
 .card {
-  margin: 0 0 20px 0;
+  margin: 1px 0 20px 0;
   border: 3px solid var(--dark);
   border-radius: var(--border-radius);
+  padding: 2px 5px;
 }
 
 .card-header {
@@ -167,12 +139,15 @@ p {
 .form-label,
 .form-input,
 .form-textarea {
-  display: block;
+  display: flex;
+  align-content: center;
 }
 
 .form-label {
   font-size: 1.1rem;
   margin: 0 0 0 5px;
+  padding: 0%;
+  align-content: center;
 }
 
 .form-input {
